--- a/Views/Shared/_Layout.cshtml
+++ b/Views/Shared/_Layout.cshtml
@@ -50,7 +50,7 @@
                                     <!-- Staff Navbar -->
                                     // <li class="nav-item"><a class="nav-link text-dark" asp-controller="Home" asp-action="Index">Home</a></li>
                                     <li class="nav-item"><a class="nav-link text-dark" asp-controller="PantryItem" asp-action="Index">Pantry Items</a></li>
-                                    // <li class="nav-item"><a class="nav-link text-dark" asp-controller="Order" asp-action="MyOrders">Orders</a></li>
+                                    <li class="nav-item"><a class="nav-link text-dark" asp-controller="Order" asp-action="MyOrders">Process Orders</a></li>
                                     <li class="nav-item"><a class="nav-link text-dark" asp-controller="Billing" asp-action="Index">Billing</a></li>
                                 }
                                 else if (isUser)
